force-app/main/default/objects/LeanData__LD_Partner_Callout__c/LeanData__LD_Partner_Callout__c.object-meta.xml
<CustomObject>
    <label>LD Partner Callout</label>
    <nameField>
        <label>LD Partner Callout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LD Partner Callouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>