force-app/main/default/objects/LeanData__LD_Partner_Callout__c/fields/LeanData__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Partner Callouts</relationshipLabel>
    <relationshipName>Partner_Callouts</relationshipName>
    <type>Lookup</type>
</CustomField>