force-app/main/default/objects/LeanData__LD_Partner_Callout__c/fields/LeanData__Partner_Log__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Partner_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Log</label>
    <referenceTo>LeanData__LD_Partner_Log__c</referenceTo>
    <relationshipLabel>Partner Callouts</relationshipLabel>
    <relationshipName>Partner_Callouts</relationshipName>
    <type>Lookup</type>
</CustomField>