force-app/main/default/objects/LeanData__LD_Partner_Callout__c/fields/LeanData__Primary_Id__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Primary_Id__c</fullName>
    <externalId>true</externalId>
    <label>Primary Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>