force-app/main/default/objects/LeanData__LD_Partner_Callout__c/fields/LeanData__Target_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Target_Object_Type__c</fullName>
    <label>Target Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>